--- a/research/articles/2025-moral-injury-identity/index.qmd
+++ b/research/articles/2025-moral-injury-identity/index.qmd
@@ -3,7 +3,7 @@ title: "Moral injury and identity: Examining moral injury as identity loss and i
 date: 2025-06-06
 author:
   - name: Thomas J. Hodges
-    orcid: 0000-0002-5184-7346
+    orcid: "{{< var orcid >}}"
     affiliation: Center for the Advancement of Military and Emergency Services (AMES) Research, Kennesaw State University
   - name: Tyler L. Collette
     affiliation: Center for the Advancement of Military and Emergency Services (AMES) Research, Kennesaw State University
@@ -34,12 +34,6 @@ doi: 10.1037/trm0000587
 Although it is widely accepted among theorists and clinicians that moral injury can affect identity, these claims are rarely specified, let alone investigated empirically. Among scholars of moral injury, an emerging explanation is that moral injury leads to a loss of identity. However, psychologists studying the relationship between identity and trauma argue that some traumatic experiences can reaffirm a person’s identity. Such reaffirmation may lead to a maintenance of identity rather than a loss, helping people make sense of traumatic experiences and be resilient to traumatic stress disorders. Drawing on this model, the Social Identity Model of Identity Change, the current article discusses these two potential processes—identity loss and identity maintenance—in the case of military moral injury. Using data from a survey of United States veterans, it models an indirect association between morally traumatic experiences and moral injury symptoms via military identity. The results indicate that identity is related to moral injury symptoms, although it is unclear if potentially morally injurious events are associated with identity. Moreover, the results depend on how identity is operationalized.
 
 ## Citation
-
-<p class="buttons" style="text-align:center;">
-
-<a class="btn btn-danger" target="_blank" href="https://www.zotero.org/save?type=doi&q=10.1037/trm0000587">{{< ai zotero >}} Add to Zotero {{< fa square-arrow-up-right >}}</a>
-
-</p>
 
 ``` bibtex
 @article{HodgesColletteMoore:2025,
