--- a/blog/posts/simulation-for-power-analysis/index.qmd
+++ b/blog/posts/simulation-for-power-analysis/index.qmd
@@ -2,9 +2,8 @@
 title: "Simulations for Sample Size Calculation"
 description: "You probably don't have enough data"
 author:
-  - name: Tommy Hodges
-    url: 
-    orcid: 
+  - name: Thomas Hodges
+    orcid: 0000-0002-5184-7346
     affiliation: Center for the Advancement of Military and Emergency Services Research, Kennesaw State University
 affiliation-url: https://www.kennesaw.edu/research/centers-facilities/ames-center/index.php
 date: 2025-06-11
@@ -12,7 +11,7 @@ date: 2025-06-11
 #citation: 
 #  url: https://samanthacsik.github.io/posts/2022-10-24-my-blog-post/ 
 #image: 
-draft: true \# setting this to \`true\` will prevent your post from appearing on your listing page until you're ready!
+draft: true
 ---
 
 ## 
