--- a/research/articles/2022-avp/index.qmd
+++ b/research/articles/2022-avp/index.qmd
@@ -1,15 +1,16 @@
 ---
-title: "Conflict resolution workshops for service members and families: The potentials of Alternatives to Violence Project (AVP) to address military domestic violence"
+title: "Conflict Resolution Workshops for Service Members and Families: The Potentials of Alternatives to Violence Project (AVP) to Address Military Domestic Violence"
 date: 2022-09-01
 author:
   - name: Thomas J. Hodges
-    orcid: "{{< var orcid >}}"
+    orcid: 0000-0002-5184-7346
     affiliation: School of Conflict Management, Peacebuilding and Development, Kennesaw State University
   - name: Shubam Sharma
     affiliation: Department of Psychological Science, Kennesaw State University
   - name: Déja S. Nicolas
     affiliation: College of Life Sciences, Thomas Jefferson University
   - name: Brian A. Moore
+    orcid: 0000-0003-0273-7236
     affiliation: Department of Psychological Science, Kennesaw State University
 categories:
   - Conflict Management
@@ -26,15 +27,19 @@ pub-info:
 doi: 10.1016/j.avb.2022.101736
 ---
 
-## Important links
+## Links
 
 -   [Paper](https://linkinghub.elsevier.com/retrieve/pii/S1359178922000179)
+-   [Paywall-Free Paper](https://www.researchgate.net/publication/359047556_Conflict_resolution_workshops_for_service_members_and_families_The_potentials_of_Alternatives_to_Violence_Project_AVP_to_address_military_domestic_violence)
+-   [Alternatives to Violence Project USA](https://avpusa.org)
 
 ## Abstract
 
 Although the violence of war is well-known, members of the United States military also struggle with domestic violence, including intimate partner violence and child abuse and neglect. The prevalence of domestic violence is not necessarily higher in the military than in the general population. However, military domestic violence does occur under institutional and cultural conditions quite different from civilian life. Further, service members are at elevated risk for health dysfunctions that can contribute to violence. The current review delineates how domestic violence in the military may be reduced by Alternatives to Violence Project, a widely used, community-based training program in conflict resolution. Specifically, we suggest Alternatives to Violence Project facilitates space to learn interpersonal skills and engage in creative discussions about the stresses and cultural norms that contribute to domestic violence in the military. As Alternatives to Violence Project and similar training does not change the stressors of military life, nor has extensive research documented its impact on violence, additional work is needed. This manuscript represents a first step toward situating conflict resolution in a framework for military domestic violence reduction, showing the potentials and limitations of Alternatives to Violence Project and making recommendations for future research and interventions.
 
 ## Citation
+
+Hodges, T. J., Sharma, S., Nicolas, D. S., & Moore, B. A. (2022). Conflict resolution workshops for service members and families: The potentials of Alternatives to Violence Project (AVP) to address military domestic violence. *Aggression and Violent Behavior*, *66*(101736). <https://doi.org/10.1016/j.avb.2022.101736>
 
 ``` bibtex
 @article{HodgesSharmaNicolasMoore:2022,
