--- a/research/book-chapters/2025-firefighter/index.qmd
+++ b/research/book-chapters/2025-firefighter/index.qmd
@@ -1,35 +1,61 @@
 ---
-title: "Seeking justice through moral injury: A review of the documentary film What I Want You to Know"
-date: 2024-11-01
+title: "Mental and Occupational Health of Fire Rescue Personnel: A model for Conducting Organizational Health Assessments"
+#date: 2025-06-14
 author:
+  - name: Bianca Channer
+    orcid: 0009-0000-6151-488X
+    affiliation: Center for the Advancement of Military and Emergency Services (AMES) Research, Kennesaw State University
+  - name: Micheal Schlenk
+    #orcid: 
+    affiliation: University of Central Florida
+  - name: Israel Sanchez-Cardona
+    #orcid: 
+    affiliation: Center for the Advancement of Military and Emergency Services (AMES) Research, Kennesaw State University
+  - name: Tyler L. Collette
+    #orcid: 
+    affiliation: Center for the Advancement of Military and Emergency Services (AMES) Research, Kennesaw State University
+  - name: Kristin A. Horan
+    #orcid: 
+    affiliation: Center for the Advancement of Military and Emergency Services (AMES) Research, Kennesaw State University
+  - name: Chris Hess
+    orcid: 0000-0003-3005-7780
+    url: https://hesscl.com
+    affiliation: Center for the Advancement of Military and Emergency Services (AMES) Research, Kennesaw State University
   - name: Thomas J. Hodges
     orcid: 0000-0002-5184-7346
     affiliation: Center for the Advancement of Military and Emergency Services (AMES) Research, Kennesaw State University
+  - name: Brian A. Moore
+    orcid: 0000-0003-0273-7236
+    affiliation: Center for the Advancement of Military and Emergency Services (AMES) Research, Kennesaw State University
 categories:
-  - Moral Injury
-  - Veterans
-  - International Conflict
+  - First Responders
+  - Organizational Psychology
+  - Health
 pub-info:
   links:
-    - name: Final version
-      url: https://www.peacejusticestudies.org/wp-content/uploads/2024/10/Seeking-Justice-Through-Moral-Injury-A-Review-of-the-Documentary-Film-What-I-Want-You-to-Know.pdf
+    - name:
+      url: 
       icon: fa-solid fa-scroll
 ---
 
-## Important links
+## Links
 
--   [Paper](https://www.peacejusticestudies.org/wp-content/uploads/2024/10/Seeking-Justice-Through-Moral-Injury-A-Review-of-the-Documentary-Film-What-I-Want-You-to-Know.pdf)
+Coming Soon.
 
 ## Abstract
 
-Throughout *What I Want You to Know*, we see how the loss of a purpose for fighting tips the moral scales of military service, putting service members at risk for moral injury.
+Coming soon.
 
 ## Citation
 
+Channer, B., Schlenk, M., Sanchez-Cardona, I., Collette, T. L., Horan, K., Hess, C., Hodges, T. J., & Moore, B. A. (in press). Mental and occupational health of fire rescue personnel: A model for conducting organizational health assessments. In V. B. Van Hasselt & R. A. Black (Eds.), *Advances in first responder mental health: Research, training, and practice*. Springer.
+
 ``` bibtex
-@article{Hodges:2024,
-    Author = {Thomas J. Hodges},
-    Journal = {Peace Chronicle},
-    Title = {Seeking justice through moral injury: A review of the documentary film What I Want You to Know},
-    Year = {2024}}
+@incollection{ChannerSchlenkEtAl:2025,
+    Author = {Bianca Channer and Micheal Schlenk and Israel Sanchez-Cardona and Tyler L. Collette and Kristin A. Horan and Chris Hess and Thomas J. Hodges and Brian A. Moore},
+    Title = {Mental and occupational health of fire rescue personnel: A model for conducting organizational health assessments},
+    Booktitle = {Advances in first responder mental health: Research, training, and practice},
+    Editor = {Vincent Van Hasselt and Ryan Black},
+    Publisher = {Springer},
+    Year = {in press}}
 ```
