--- a/research/index.qmd
+++ b/research/index.qmd
@@ -9,12 +9,22 @@ listing:
     contents: "reviews/*/index.qmd"
     sort: "date desc"
     categories: true
+  - id: chapters
+    contents: "book-chapters/*/index.qmd"
+    sort: "date desc"
+    categories: true
+  - id: dissertation
+    contents: "dissertation/*/index.qmd"
+    sort: "date desc"
+    categories: true
 page-layout: full
 include-back-link: false
 toc-location: right
 ---
 
-My research spans fields including organizational psychology, health, conflict resolution, and international affairs.
+I do applied research in workplaces and communities. My research focuses on understanding factors that impact people's mental health. I draw on organizational psychology, conflict resolution, international affairs, sociology, and other fields.
+
+Currently, I am a Senior Research Associate for the [Center for the Advancement of Military and Emergency Services Research (AMES)](https://www.kennesaw.edu/research/centers-facilities/ames-center/index.php) at [Kennesaw State University](kennesaw.edu).
 
 ## Journal articles
 
@@ -26,12 +36,12 @@ My research spans fields including organizational psychology, health, conflict r
 ::: {#reviews}
 :::
 
-## 
-
 ## Book Chapters
 
-<div>
+::: {#chapters}
+:::
 
-</div>
+## Dissertation
 
-## 
+::: {#dissertation}
+:::
