--- a/data/posts/data-cleaning/index.qmd
+++ b/data/posts/data-cleaning/index.qmd
@@ -1,39 +1,51 @@
 ---
 title: "Cleaning and Screening Messy Real-World Survey Data"
-description: ""
+description: "You analyze the data you have, not the data you want"
 author:
   - name: Thomas Hodges
     orcid: 0000-0002-5184-7346
 date: 2025-06-25
-#categories: \[R, Statistics, Research Design\] \# self-defined categories
+#categories: \[R, Data Collection\] \
 #citation: 
 #  url: https://samanthacsik.github.io/posts/2022-10-24-my-blog-post/ 
 #image: 
 draft: true
 ---
 
-> You analyze the data you have, not the data you want. 
+# Summary
 
-I have conducted over X survey with employees, students, and community members. A common issue with surveys is data quality. 
+I have conducted over X survey with employees, students, and community members. A common issue with surveys is data quality.
 
-For this project, I used cutting-edge methods to detect poor-quality survey responses. I then repeated the process for two additional surveys, resulting in clean data sets that have been used for X scientific publications. Additionally, I am drafting a paper that outlines the methods in an accessible way. 
+For this project, I used cutting-edge methods to detect poor-quality survey responses. I then repeated the process for two additional surveys, resulting in clean data sets that have been used for X scientific publications. Additionally, I am drafting a paper that outlines the methods in an accessible way.
 
-This portfolio post highlights the data problem I faced and the methods I used to over come it. 
+-   git hub
 
-Tools: R, Careless
-Project Repo: 
+-   paper
 
-## Dirty Data
+-   talk
 
-Data is never easy. 
+# Skills Demonstrated
 
-Careless survey responding
+1.  R Programming
 
-Examples using R visualizations
+<!-- -->
+
+2.  Data Quality Assurance
+
+3.  Survey Design and Analysis
+
+# Real-World Applications:
+
+-   People Analytics
+
+-   Employee Health and Well-being
+
+-   Employee Engagement and Satisfaction surveys
+
+# Key Highlights
+
+Dirty Data: Careless survey responding. Examples using R visualizations
+
+Developing an Order of Operations
 
 ## 
-
-
-
-
-
