Added folders and index page for talks

--- a/talks/presentations/just-lider-sasa-2023/index.qmd
+++ b/talks/presentations/just-lider-sasa-2023/index.qmd
@@ -1,10 +1,10 @@
 ---
-title: "EAP..."
+title: "Female leadership in climate change mitigation and environmental sustainability"
 description: ""
 author:
   - name: Thomas Hodges
     orcid: 0000-0002-5184-7346
-date: 2025-07-11
+date: 2023-09-01
 #categories: \[R, Statistics, Research Design\] \# self-defined categories
 #citation: 
 #  url: https://samanthacsik.github.io/posts/2022-10-24-my-blog-post/ 
@@ -12,6 +12,8 @@ date: 2025-07-11
 draft: true
 ---
 
-Summary
+# Summary
 
-Slides
+# Slides
+
+# Citation
