Updated talk index pages

--- a/talks/posters/somatic-stress-sss-2025/index.qmd
+++ b/talks/posters/somatic-stress-sss-2025/index.qmd
@@ -9,7 +9,7 @@ date: 2025-04-01
 #citation: 
 #  url: https://samanthacsik.github.io/posts/2022-10-24-my-blog-post/ 
 #image: 
-draft: true
+draft: false
 ---
 
 # Summary
