--- a/talks/presentations/burnout-euwop-2025/index.qmd
+++ b/talks/presentations/burnout-euwop-2025/index.qmd
@@ -1,19 +1,25 @@
 ---
 title: "Understanding the role of recovery and dysfunctional cognitions on burnout in public safety"
-description: ""
+description: "European Congress of Work and Organizational Psychology, Prague, 2025"
 author:
   - name: Thomas Hodges
     orcid: 0000-0002-5184-7346
-date: 2025-076-10
+date: 2025-05-22
 #categories: \[R, Statistics, Research Design\] \# self-defined categories
 #citation: 
 #  url: https://samanthacsik.github.io/posts/2022-10-24-my-blog-post/ 
 #image: 
-draft: true
+draft: false
 ---
 
 # Summary
 
+Presentation at the conference of the [European Association of Work and Organizational Psychology (EAWOP)](https://eawop.org).
+
 # Slides
 
+Coming soon.
+
 # Citation
+
+Trejo-Rivera, E., Sánchez-Cardona, I., Vera, M**., Hodges, T. J.,** Moore, B.A., Collette, T., & Hess, C. (May 2025). Understanding the role of recovery and dysfunctional cognitions on burnout in public safety. *European Congress of Work and Organizational Psychology*. Prague, Czech Republic. 
