--- a/talks/presentations/grassroots-peace-2021/index.qmd
+++ b/talks/presentations/grassroots-peace-2021/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Role of grassroots workers in bringing peace to local communities"
-description: ""
+description: "Peace360, Online, 2021"
 author:
   - name: Thomas Hodges
     orcid: 0000-0002-5184-7346
@@ -9,10 +9,12 @@ date: 2021-01-01
 #citation: 
 #  url: https://samanthacsik.github.io/posts/2022-10-24-my-blog-post/ 
 #image: 
-draft: true
+draft: false
 ---
 
 # Summary
+
+Presentation for Peace360 on a grassroots conflict management program: Alternatives to Violence Project. The talk eventually was developed into a paper, published in
 
 # Slides
 
