--- a/talks/presentations/suicidality-spc-2025/index.qmd
+++ b/talks/presentations/suicidality-spc-2025/index.qmd
@@ -1,19 +1,25 @@
 ---
 title: "Evaluating suicidality: Examining risk and protective factors for Georgia’s veterans and families"
-description: ""
+description: "Georgia Suicide Prevention Conference, Peachtree City, 2025"
 author:
   - name: Thomas Hodges
     orcid: 0000-0002-5184-7346
-date: 2025-02-01
+date: 2025-02-18
 #categories: \[R, Statistics, Research Design\] \# self-defined categories
 #citation: 
 #  url: https://samanthacsik.github.io/posts/2022-10-24-my-blog-post/ 
 #image: 
-draft: true
+draft: false
 ---
 
 # Summary
 
+Presentation at the [Georgia Suicide Prevention Conference](https://preventsuicidega.org/event/conference-25/). Presented data from a survey of military reservists, highlighting risk factors for suicide. Risks included prior homeless and sudden job loss, with risks varying depending on gender and race.
+
 # Slides
 
+Coming soon.
+
 # Citation
+
+Moore, B. A., Channer, B., Horan, K., & Hodges, T.J. (February 2025). “Evaluating suicidality: Examining risk and protective factors for Georgia’s veterans and families.” 2025 Suicide Prevention Conference. Peachtree City, Georgia.
