added details to talks presentations

--- a/index.qmd
+++ b/index.qmd
@@ -9,3 +9,9 @@ During my PhD studies, I helped to found the [AMES Research Center](https://www.
 I wear a lot of hats. I developed our conflict management training program, training over 150 individuals in constructive conflict resolution. I also act as a project manager, data scientist, and consultant. I’ve given 23 public presentations, published 8 articles, and written 3 reports for state agencies.\
 \
 I’ve had a nonlinear career path. Before my PhD, I worked a few years in HR and Business Development. But I developed a temporary disability, overcame it, then took time to travel, volunteer, intern, and go to grad school. I’ve been driven by learning and growing into a person who can have an impact.\
+
+### Site Info
+
+-   I took inspiration for this site from Andrew Heiss' [excellent website and blog](https://www.andrewheiss.com).
+-   I used [Quarto](https://quarto.org/docs/websites/) to create the site.
+-   The color scheme for the site comes from the Lakota palette in the [MetBrewer](https://github.com/BlakeRMills/MetBrewer) library for R and Python. The palettes are Inspired by displays at the [Metropolitan Museum of Art in New York](https://www.metmuseum.org) Specifically, I use the [Lakota palette](https://www.metmuseum.org/art/collection/search/751512).
