--- a/talks/presentations/profiles-sss-2023/index.qmd
+++ b/talks/presentations/profiles-sss-2023/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Profiles of Resilience: Examining the Stories of First Responder and Military Families"
-description: "Symposium of Student Scholars, Kennesaw, 2023"
+description: "Symposium of Student Scholars, Kennesaw"
 author:
   - name: Thomas Hodges
     orcid: 0000-0002-5184-7346
@@ -15,6 +15,8 @@ draft: false
 # Summary
 
 Profiles in Resilience is an initiative to document stories of resilience in first responders, veterans, caretakers, and their family members.
+
+Presented at Kennesaw State University's Symposium of Student Scholars, Spring 2023.
 
 # Slides
 
