--- a/talks/presentations/suicidality-spc-2025/index.qmd
+++ b/talks/presentations/suicidality-spc-2025/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Evaluating suicidality: Examining risk and protective factors for Georgia’s veterans and families"
-description: "Georgia Suicide Prevention Conference, Peachtree City, 2025"
+description: "Georgia Suicide Prevention Conference, Peachtree City"
 author:
   - name: Thomas Hodges
     orcid: 0000-0002-5184-7346
