Added categories to presentations

--- a/data/posts/bayes/index.qmd
+++ b/data/posts/bayes/index.qmd
@@ -5,14 +5,14 @@ author:
   - name: Thomas Hodges
     orcid: 0000-0002-5184-7346
 #date: 2025-06-25
-#categories: \[R, Statistics\] \# self-defined categories
-#citation: 
-#  url: https://samanthacsik.github.io/posts/2022-10-24-my-blog-post/ 
-#image: 
+categories: 
+  - Statistics
+  - Bayesian Modeling
+  - R
 draft: true
 ---
 
-# Summary 
+# Summary
 
 See the
 
