--- a/talks/presentations/grassroots-peace-2021/index.qmd
+++ b/talks/presentations/grassroots-peace-2021/index.qmd
@@ -5,10 +5,8 @@ author:
   - name: Thomas Hodges
     orcid: 0000-0002-5184-7346
 date: 2021-08-21
-#categories: \[R, Statistics, Research Design\] \# self-defined categories
-#citation: 
-#  url: https://samanthacsik.github.io/posts/2022-10-24-my-blog-post/ 
-#image: 
+categories: 
+  - Conflict Resolution
 draft: false
 ---
 
