--- a/talks/presentations/lies-gsa-2022/index.qmd
+++ b/talks/presentations/lies-gsa-2022/index.qmd
@@ -5,10 +5,9 @@ author:
   - name: Thomas Hodges
     orcid: 0000-0002-5184-7346
 date: 2022-11-04
-#categories: \[R, Statistics, Research Design\] \# self-defined categories
-#citation: 
-#  url: https://samanthacsik.github.io/posts/2022-10-24-my-blog-post/ 
-#image: 
+categories: 
+  - Economics
+  - Identity
 draft: false
 ---
 
