--- a/data/posts/data-cleaning/index.qmd
+++ b/data/posts/data-cleaning/index.qmd
@@ -5,10 +5,10 @@ author:
   - name: Thomas Hodges
     orcid: 0000-0002-5184-7346
 date: 2025-06-25
-#categories: \[R, Data Collection\] \
-#citation: 
-#  url: https://samanthacsik.github.io/posts/2022-10-24-my-blog-post/ 
-#image: 
+categories: 
+  - Data Cleansing
+  - Unsupervised Learning
+  - R
 draft: true
 ---
 
