--- a/talks/presentations/burnout-euwop-2025/index.qmd
+++ b/talks/presentations/burnout-euwop-2025/index.qmd
@@ -5,9 +5,10 @@ author:
   - name: Thomas Hodges
     orcid: 0000-0002-5184-7346
 date: 2025-05-22
-#categories: \[R, Statistics, Research Design\] \# self-defined categories
-#citation: 
-#  url: https://samanthacsik.github.io/posts/2022-10-24-my-blog-post/ 
+categories:
+  - Mental Health
+  - Organizational Psychology
+  - Management
 #image: 
 draft: false
 ---
