--- a/talks/presentations/moral-injury-gsa-2023/index.qmd
+++ b/talks/presentations/moral-injury-gsa-2023/index.qmd
@@ -5,10 +5,11 @@ author:
   - name: Thomas Hodges
     orcid: 0000-0002-5184-7346
 date: 2023-10-27
-#categories: \[R, Statistics, Research Design\] \# self-defined categories
-#citation: 
-#  url: https://samanthacsik.github.io/posts/2022-10-24-my-blog-post/ 
-#image: 
+categories: 
+  - Mental Health
+  - Veterans
+  - Reintegration
+  - Identity
 draft: false
 ---
 
