--- a/talks/presentations/suicidality-spc-2025/index.qmd
+++ b/talks/presentations/suicidality-spc-2025/index.qmd
@@ -5,10 +5,10 @@ author:
   - name: Thomas Hodges
     orcid: 0000-0002-5184-7346
 date: 2025-02-18
-#categories: \[R, Statistics, Research Design\] \# self-defined categories
-#citation: 
-#  url: https://samanthacsik.github.io/posts/2022-10-24-my-blog-post/ 
-#image: 
+categories: 
+  - Mental Health
+  - Veterans
+  - Suicide Prevention
 draft: false
 ---
 
